@@ -1,5 +1,10 @@
 2005-03-20  Tor Lillqvist  <tml@novell.com>
 
+	* glib/gspawn-win32.c (do_spawn_with_pipes): Close the process
+	handle if the called doesn't want it also in the case without a
+	helper process.
+	(g_spawn_sync): Don't ask for a child pid which we don't need.
+
 	* glib/gtimer.c: On Win32, use GetSystemTimeAsFileTime() instead
 	of GetTickCount(). (#159507)
 
